# clmerge

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
changelog/: config.ron
changelog/0.1.0/added/: basic-merging.md
changelog/0.1.1/added/: linkify-prs.md
changelog/0.1.2/fixed/: ver-sorting.md
example/: CHANGELOG.md
example/changelog/: config.ron  old.md
example/changelog/0.1.0/added/: general.md
example/changelog/0.2.0/added/: feature-bar.md  feature-baz.md
example/changelog/0.2.0/changed/: foo.md
src/: cl_writer.rs  config.rs  macros.rs  main.rs  util.rs  versions.rs
