[package]
name = "clmerge"
version = "0.1.1"
authors = ["Thomas Schaller <torkleyy@gmail.com>"]
edition = "2018"
description = "Opinionated, simple changelog merger"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/torkleyy/clmerge"

[dependencies]
regex = "1"
ron = "0.4"
serde = { version = "1", features = ["serde_derive"] }
semver = "0.9.0"
